# ldap-manager

./: .gitconfig  .gitignore  LICENSE  Makefile  README  README.md  config.example.yaml  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: makefile.yml
docs/: backends.md
ldap_manager/: __init__.py  audit.py  backup.py  batch.py  check.py  cli.py  cli.py.bck  config.py  connection.py  groups.py  ldif_ops.py  passwords.py  ppolicy.py  server.py  sshkeys.py  tree.py  users.py
ldap_manager/backends/: __init__.py  base.py  generic.py  openldap.py  schemas.py
tests/: conftest.py  test_audit.py  test_audit_sinks.py  test_backend_factory.py  test_backup.py  test_batch.py  test_capability_gates.py  test_check.py  test_cli.py  test_config.py  test_generic_backend.py  test_groups.py  test_ldif_ops.py  test_passwords.py  test_ppolicy.py  test_server.py  test_sshkeys.py  test_tree.py  test_users.py
